--- a/sources/OSC-VS/Device/FPGA.vcxproj.filters
+++ b/sources/OSC-VS/Device/FPGA.vcxproj.filters
@@ -333,6 +333,9 @@
     <ClCompile Include="..\..\Device\src\Display\Font\Font.cpp">
       <Filter>Display\Font</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Device\src\Display\Cursors.cpp">
+      <Filter>Display</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal.h">
@@ -736,6 +739,9 @@
     </ClInclude>
     <ClInclude Include="..\..\Device\src\Settings\SettingsMultimeter.h">
       <Filter>Settings</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Device\src\Display\Cursors.h">
+      <Filter>Display</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
