--- a/sources/OSC-VS/Device/FPGA.vcxproj
+++ b/sources/OSC-VS/Device/FPGA.vcxproj
@@ -29,6 +29,7 @@
     <ClCompile Include="..\..\Device\src\Display\BottomPart.cpp" />
     <ClCompile Include="..\..\Device\src\Display\Colors.cpp" />
     <ClCompile Include="..\..\Device\src\Display\Console.cpp" />
+    <ClCompile Include="..\..\Device\src\Display\Cursors.cpp" />
     <ClCompile Include="..\..\Device\src\Display\Display.cpp" />
     <ClCompile Include="..\..\Device\src\Display\DisplayOsci.cpp" />
     <ClCompile Include="..\..\Device\src\Display\DisplayPrimitives.cpp" />
@@ -155,6 +156,7 @@
     <ClInclude Include="..\..\Device\src\Display\BottomPart.h" />
     <ClInclude Include="..\..\Device\src\Display\Colors.h" />
     <ClInclude Include="..\..\Device\src\Display\Console.h" />
+    <ClInclude Include="..\..\Device\src\Display\Cursors.h" />
     <ClInclude Include="..\..\Device\src\Display\Display.h" />
     <ClInclude Include="..\..\Device\src\Display\DisplayOsci.h" />
     <ClInclude Include="..\..\Device\src\Display\DisplayPrimitives.h" />
