--- a/sources/OSC-VS/Device/FPGA.vcxproj
+++ b/sources/OSC-VS/Device/FPGA.vcxproj
@@ -380,7 +380,7 @@
       <PreprocessorDefinitions>USE_HAL_DRIVER;STM32F437xx;MSVC;WIN32;OLD_RECORDER;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions>-MP %(AdditionalOptions)</AdditionalOptions>
       <MinimalRebuild>false</MinimalRebuild>
-      <DisableSpecificWarnings>4068;4100;4201;4333;4514;4623;4626;4774;4820;5027;5039;5045</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4068;4100;4201;4211;4333;4514;4623;4626;4774;4820;5027;5039;5045</DisableSpecificWarnings>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
