--- a/sources/OSC-VS/Device/FPGA.vcxproj
+++ b/sources/OSC-VS/Device/FPGA.vcxproj
@@ -88,6 +88,7 @@
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageMemory.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageMultimeter.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageService.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageTester.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageTime.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageTrig.cpp" />
     <ClCompile Include="..\..\Device\src\Multimeter\Multimeter.cpp" />
@@ -216,6 +217,7 @@
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageMemory.h" />
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageMultimeter.h" />
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageService.h" />
+    <ClInclude Include="..\..\Device\src\Menu\Pages\PageTester.h" />
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageTime.h" />
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageTrig.h" />
     <ClInclude Include="..\..\Device\src\Multimeter\Multimeter.h" />
