--- a/sources/OSC-VS/Device/FPGA.vcxproj
+++ b/sources/OSC-VS/Device/FPGA.vcxproj
@@ -26,19 +26,12 @@
     <ClCompile Include="..\..\Device\src\Data\Reader.cpp" />
     <ClCompile Include="..\..\Device\src\Data\Storage.cpp" />
     <ClCompile Include="..\..\Device\src\Device.cpp" />
-    <ClCompile Include="..\..\Device\src\Display\BottomPart.cpp" />
     <ClCompile Include="..\..\Device\src\Display\Colors.cpp" />
     <ClCompile Include="..\..\Device\src\Display\Console.cpp" />
-    <ClCompile Include="..\..\Device\src\Display\Cursors.cpp" />
     <ClCompile Include="..\..\Device\src\Display\Display.cpp" />
-    <ClCompile Include="..\..\Device\src\Display\DisplayOsci.cpp" />
     <ClCompile Include="..\..\Device\src\Display\DisplayPrimitives.cpp" />
     <ClCompile Include="..\..\Device\src\Display\Font\Font.cpp" />
-    <ClCompile Include="..\..\Device\src\Display\Grid.cpp" />
-    <ClCompile Include="..\..\Device\src\Display\HiPart.cpp" />
-    <ClCompile Include="..\..\Device\src\Display\MemoryWindow.cpp" />
     <ClCompile Include="..\..\Device\src\Display\Painter.cpp" />
-    <ClCompile Include="..\..\Device\src\Display\PainterData.cpp" />
     <ClCompile Include="..\..\Device\src\Display\PainterMem.cpp" />
     <ClCompile Include="..\..\Device\src\FlashDrive\FileManager.cpp" />
     <ClCompile Include="..\..\Device\src\FlashDrive\FlashDrive.cpp" />
@@ -92,7 +85,14 @@
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageTime.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageTrig.cpp" />
     <ClCompile Include="..\..\Device\src\Multimeter\Multimeter.cpp" />
+    <ClCompile Include="..\..\Device\src\Osci\BottomPart.cpp" />
+    <ClCompile Include="..\..\Device\src\Osci\Cursors.cpp" />
+    <ClCompile Include="..\..\Device\src\Osci\Grid.cpp" />
+    <ClCompile Include="..\..\Device\src\Osci\HiPart.cpp" />
+    <ClCompile Include="..\..\Device\src\Osci\MemoryWindow.cpp" />
     <ClCompile Include="..\..\Device\src\Osci\Osci.cpp" />
+    <ClCompile Include="..\..\Device\src\Osci\OsciGraphics.cpp" />
+    <ClCompile Include="..\..\Device\src\Osci\PainterData.cpp" />
     <ClCompile Include="..\..\Device\src\Settings\Settings.cpp" />
     <ClCompile Include="..\..\Device\src\Settings\SettingsChannel.cpp" />
     <ClCompile Include="..\..\Device\src\Settings\SettingsDebug.cpp" />
@@ -154,20 +154,13 @@
     <ClInclude Include="..\..\Device\src\Data\Storage.h" />
     <ClInclude Include="..\..\Device\src\defines.h" />
     <ClInclude Include="..\..\Device\src\Device.h" />
-    <ClInclude Include="..\..\Device\src\Display\BottomPart.h" />
     <ClInclude Include="..\..\Device\src\Display\Colors.h" />
     <ClInclude Include="..\..\Device\src\Display\Console.h" />
-    <ClInclude Include="..\..\Device\src\Display\Cursors.h" />
     <ClInclude Include="..\..\Device\src\Display\Display.h" />
-    <ClInclude Include="..\..\Device\src\Display\DisplayOsci.h" />
     <ClInclude Include="..\..\Device\src\Display\DisplayPrimitives.h" />
     <ClInclude Include="..\..\Device\src\Display\DisplayTypes.h" />
     <ClInclude Include="..\..\Device\src\Display\Font\font.h" />
-    <ClInclude Include="..\..\Device\src\Display\Grid.h" />
-    <ClInclude Include="..\..\Device\src\Display\HiPart.h" />
-    <ClInclude Include="..\..\Device\src\Display\MemoryWindow.h" />
     <ClInclude Include="..\..\Device\src\Display\Painter.h" />
-    <ClInclude Include="..\..\Device\src\Display\PainterData.h" />
     <ClInclude Include="..\..\Device\src\Display\PainterMem.h" />
     <ClInclude Include="..\..\Device\src\Display\Symbols.h" />
     <ClInclude Include="..\..\Device\src\Display\TypeSymbols.h" />
@@ -222,7 +215,13 @@
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageTime.h" />
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageTrig.h" />
     <ClInclude Include="..\..\Device\src\Multimeter\Multimeter.h" />
+    <ClInclude Include="..\..\Device\src\Osci\BottomPart.h" />
+    <ClInclude Include="..\..\Device\src\Osci\Cursors.h" />
+    <ClInclude Include="..\..\Device\src\Osci\Grid.h" />
+    <ClInclude Include="..\..\Device\src\Osci\HiPart.h" />
+    <ClInclude Include="..\..\Device\src\Osci\MemoryWindow.h" />
     <ClInclude Include="..\..\Device\src\Osci\Osci.h" />
+    <ClInclude Include="..\..\Device\src\Osci\PainterData.h" />
     <ClInclude Include="..\..\Device\src\Settings\Settings.h" />
     <ClInclude Include="..\..\Device\src\Settings\SettingsChannel.h" />
     <ClInclude Include="..\..\Device\src\Settings\SettingsDebug.h" />
