--- a/sources/Device/DeviceOSC.uvprojx
+++ b/sources/Device/DeviceOSC.uvprojx
@@ -1791,26 +1791,6 @@
               <FilePath>.\src\Display\Painter.h</FilePath>
             </File>
             <File>
-              <FileName>Grid.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Display\Grid.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>Grid.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Display\Grid.h</FilePath>
-            </File>
-            <File>
-              <FileName>PainterData.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Display\PainterData.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>PainterData.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Display\PainterData.h</FilePath>
-            </File>
-            <File>
               <FileName>TypeSymbols.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\Display\TypeSymbols.h</FilePath>
@@ -1856,36 +1836,6 @@
               <FilePath>.\src\Display\Console.h</FilePath>
             </File>
             <File>
-              <FileName>BottomPart.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Display\BottomPart.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>BottomPart.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Display\BottomPart.h</FilePath>
-            </File>
-            <File>
-              <FileName>DisplayOsci.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Display\DisplayOsci.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>DisplayOsci.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Display\DisplayOsci.h</FilePath>
-            </File>
-            <File>
-              <FileName>HiPart.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Display\HiPart.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>HiPart.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Display\HiPart.h</FilePath>
-            </File>
-            <File>
               <FileName>PainterMem.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\Display\PainterMem.cpp</FilePath>
@@ -1894,26 +1844,6 @@
               <FileName>PainterMem.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\Display\PainterMem.h</FilePath>
-            </File>
-            <File>
-              <FileName>MemoryWindow.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Display\MemoryWindow.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>MemoryWindow.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Display\MemoryWindow.h</FilePath>
-            </File>
-            <File>
-              <FileName>Cursors.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Display\Cursors.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>Cursors.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Display\Cursors.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -2354,6 +2284,71 @@
               <FileName>Osci.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\Osci\Osci.h</FilePath>
+            </File>
+            <File>
+              <FileName>BottomPart.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Osci\BottomPart.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>BottomPart.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Osci\BottomPart.h</FilePath>
+            </File>
+            <File>
+              <FileName>Cursors.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Osci\Cursors.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Cursors.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Osci\Cursors.h</FilePath>
+            </File>
+            <File>
+              <FileName>Grid.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Osci\Grid.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Grid.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Osci\Grid.h</FilePath>
+            </File>
+            <File>
+              <FileName>HiPart.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Osci\HiPart.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>HiPart.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Osci\HiPart.h</FilePath>
+            </File>
+            <File>
+              <FileName>MemoryWindow.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Osci\MemoryWindow.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>MemoryWindow.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Osci\MemoryWindow.h</FilePath>
+            </File>
+            <File>
+              <FileName>OsciGraphics.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Osci\OsciGraphics.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>PainterData.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Osci\PainterData.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>PainterData.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Osci\PainterData.h</FilePath>
             </File>
           </Files>
         </Group>
