--- a/sources/Device/DeviceOSC.uvprojx
+++ b/sources/Device/DeviceOSC.uvprojx
@@ -2425,6 +2425,11 @@
               <FileType>5</FileType>
               <FilePath>.\src\Settings\SettingsTime.h</FilePath>
             </File>
+            <File>
+              <FileName>SettingsTransformation.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Settings\SettingsTransformation.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
