--- a/sources/OSC-VS/Device/FPGA.vcxproj
+++ b/sources/OSC-VS/Device/FPGA.vcxproj
@@ -98,6 +98,7 @@
     <ClCompile Include="..\..\Device\src\Settings\SettingsDebug.cpp" />
     <ClCompile Include="..\..\Device\src\Settings\SettingsMemory.cpp" />
     <ClCompile Include="..\..\Device\src\Settings\SettingsTime.cpp" />
+    <ClCompile Include="..\..\Device\src\Settings\SettingsTransformation.cpp" />
     <ClCompile Include="..\..\Device\src\Tables.cpp" />
     <ClCompile Include="..\..\Device\src\Tester\Tester.cpp" />
     <ClCompile Include="..\..\Device\src\Tester\TesterGraphics.cpp" />
