--- a/sources/Device/DeviceOSC.uvprojx
+++ b/sources/Device/DeviceOSC.uvprojx
@@ -2350,6 +2350,16 @@
               <FileType>5</FileType>
               <FilePath>.\src\Osci\PainterData.h</FilePath>
             </File>
+            <File>
+              <FileName>FrequencyCounter.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Osci\FrequencyCounter.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>FrequencyCounter.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Osci\FrequencyCounter.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
