--- a/sources/OSC-VS/Device/FPGA.vcxproj.filters
+++ b/sources/OSC-VS/Device/FPGA.vcxproj.filters
@@ -216,9 +216,6 @@
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageTrig.cpp">
       <Filter>Menu\Pages</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Device\src\Globals.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\Device\src\Settings\SettingsTime.cpp">
       <Filter>Settings</Filter>
     </ClCompile>
@@ -377,6 +374,9 @@
     </ClCompile>
     <ClCompile Include="..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Core\Src\usbh_pipes.c">
       <Filter>libs\USBH</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Device\src\defines.cpp">
+      <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -625,9 +625,6 @@
     </ClInclude>
     <ClInclude Include="..\..\Device\src\Menu\Pages\PageTrig.h">
       <Filter>Menu\Pages</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\Device\src\Globals.h">
-      <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Device\src\Settings\SettingsTime.h">
       <Filter>Settings</Filter>
