--- a/sources/OSC-VS/Device/FPGA.vcxproj
+++ b/sources/OSC-VS/Device/FPGA.vcxproj
@@ -131,7 +131,7 @@
     <ClCompile Include="..\..\Device\src\Utils\Dictionary.cpp" />
     <ClCompile Include="..\..\Device\src\Utils\Math.cpp" />
     <ClCompile Include="..\..\Device\src\Utils\MathOSC.cpp" />
-    <ClCompile Include="..\..\Device\src\Utils\Measures.cpp" />
+    <ClCompile Include="..\..\Device\src\Utils\Measure.cpp" />
     <ClCompile Include="..\..\Device\src\Utils\ProcessingSignal.cpp" />
     <ClCompile Include="..\..\Device\src\Utils\StringUtils.cpp" />
     <ClCompile Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_dac.c">
@@ -288,7 +288,7 @@
     <ClInclude Include="..\..\Device\src\Utils\Dictionary.h" />
     <ClInclude Include="..\..\Device\src\Utils\Math.h" />
     <ClInclude Include="..\..\Device\src\Utils\MathOSC.h" />
-    <ClInclude Include="..\..\Device\src\Utils\Measures.h" />
+    <ClInclude Include="..\..\Device\src\Utils\Measure.h" />
     <ClInclude Include="..\..\Device\src\Utils\ProcessingSignal.h" />
     <ClInclude Include="..\..\Device\src\Utils\StringUtils.h" />
     <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal.h">
