--- a/sources/OSC-VS/Device/FPGA.vcxproj.filters
+++ b/sources/OSC-VS/Device/FPGA.vcxproj.filters
@@ -231,9 +231,6 @@
     <ClCompile Include="..\..\Device\src\Utils\Dictionary.cpp">
       <Filter>Utils</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Device\src\Utils\Measures.cpp">
-      <Filter>Utils</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\Device\src\Utils\ProcessingSignal.cpp">
       <Filter>Utils</Filter>
     </ClCompile>
@@ -377,6 +374,9 @@
     </ClCompile>
     <ClCompile Include="..\..\Device\src\defines.cpp">
       <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Device\src\Utils\Measure.cpp">
+      <Filter>Utils</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -647,9 +647,6 @@
     <ClInclude Include="..\..\Device\src\Utils\Dictionary.h">
       <Filter>Utils</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Device\src\Utils\Measures.h">
-      <Filter>Utils</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\Device\src\Utils\ProcessingSignal.h">
       <Filter>Utils</Filter>
     </ClInclude>
@@ -802,6 +799,9 @@
     </ClInclude>
     <ClInclude Include="..\..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Core\Inc\usbh_pipes.h">
       <Filter>libs\USBH</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Device\src\Utils\Measure.h">
+      <Filter>Utils</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
