--- a/sources/Device/DeviceOSC.uvprojx
+++ b/sources/Device/DeviceOSC.uvprojx
@@ -2535,6 +2535,16 @@
               <FileType>5</FileType>
               <FilePath>.\src\Utils\Measure.h</FilePath>
             </File>
+            <File>
+              <FileName>Values.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Utils\Values.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Values.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Utils\Values.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
