--- a/sources/OSC-VS/Device/FPGA.vcxproj.filters
+++ b/sources/OSC-VS/Device/FPGA.vcxproj.filters
@@ -375,6 +375,9 @@
     <ClCompile Include="..\..\Device\src\Utils\Measure.cpp">
       <Filter>Utils</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Device\src\Utils\Values.cpp">
+      <Filter>Utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal.h">
@@ -795,6 +798,9 @@
       <Filter>libs\USBH</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Device\src\Utils\Measure.h">
+      <Filter>Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Device\src\Utils\Values.h">
       <Filter>Utils</Filter>
     </ClInclude>
   </ItemGroup>
